<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_all_task"
            android:icon="@drawable/alltask"
            android:title="@string/nav_all_task"/>
        <item
            android:id="@+id/nav_upgrade"
            android:icon="@drawable/upgrade"
            android:title="@string/nav_upgrade"/>
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/guide"
            android:title="@string/nav_guide"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/engine"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/cloud_up"
            android:title="@string/nav_upload"/>
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/cloud_down"
            android:title="@string/nav_download"/>
        <item
            android:id="@+id/nav_set_lock"
            android:icon="@drawable/locked"
            android:title="@string/nav_set_lock"/>
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/trash"
            android:title="@string/nav_trash"/>

</menu>
